# Cmake-project

./: CMakeLists.txt  GmockTest.cpp  README.md  adder.cpp  adder.hpp  adderTest.cpp  gitgnore
